<resources>
    <string name="app_name">Capstone Project</string>


    <string name="greetings">Hello, Sofia</string>
    <string name="looking_something">Looking for something?</string>

    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="favorites">Favorites</string>
    <string name="menu">Menu</string>
    <string name="profile_button">Profile Button</string>

    <string name="product_image">Produk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture">Capture</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="flavorscape">FlavorScape</string>
    <string name="name">Name\n</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_instead">Already have an account? Login here</string>
    <string name="Fruits">Fruits</string>
    <string name="Vegetables">Vegetables</string>
    <string name="Others">Others</string>
    <string name="profile">Profile</string>
    <string name="image_classifier_failed">Failed to detect</string>
    <string name="detail_menu">Details</string>

    <string name="detail_header">Detail Menu</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="methods_header">Methods</string>


</resources>